--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--//banner section starts here-->
     <!-- Slider  -->
     <div class="callbacks_container w3-layouts">
-      <ul class="rslides callbacks callbacks1 agileits" id="slider4">
-        <li id="callbacks1_s1" class="" style="float: none; position: absolute; opacity: 0; z-index: 1; display: list-item; transition: opacity 500ms ease-in-out;">
+      <ul class="rslides callbacks callbacks1 agileits " id="slider4">
+        <li id="callbacks1_s1" class="" style="float: none; position: absolute; opacity: 0; z-index: 1; display: list-item; ">
           <img src="images/b11.jpg" alt="home" />
           <div class="caption text-center">
 			<div class="col-md-8 banner_text_left">
@@ -108,7 +108,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
         </li>
 		
-        <li id="callbacks1_s2" class="callbacks1_on" style="float: left; position: relative; opacity: 1; z-index: 2; display: list-item; transition: opacity 500ms ease-in-out;">
+        <li id="callbacks1_s2" cass="callbacks1_on" style="float: left; position: relative; opacity: 1; z-index: 2; display: list-item;">
           <img src="images/22.jpg" alt="home" />
             <div class="caption text-center">
 			<div class="col-md-8 banner_text_left">
@@ -454,19 +454,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"></div>
 		</div> 
 		<div class="col-md-6 w3-subscribe-right">
+		</div>	
 		<div class="subscribe-w3ls">
-		<form action="#" method="post">
-			<div class="form-group1 w3layouts w3 w3l w3ls">
-				Email :<a href="mailto:info@proaudios.cl"> info@proaudios.cl</a></p>
+			
+	    </div>	
+         <div lass="form-group2 agileits agileinfo wthree w3-agileits"> 
 			</div>
-			<div class="form-group2 agileits agileinfo wthree w3-agileits">
-				<button type="submit" class="btn btn-outline btn-lg"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-			</div>
-			<div class="clear"></div>
-		</form>
-	</div>	
-
-		</div>
+		
 		<div class="clearfix"></div>
 </div>
 </div>
