--- a/index.html
+++ b/index.html
@@ -150,9 +150,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h3>QUIENES SOMOS ?</h3>
 				<p>Somos una empresa dedicada a la industria del audio con una amplia experiencia y  capacitación en mantenimiento, asesoría, reparación y manejo de equipos de audio profesional  para espectáculos, bares, discoteques, centros nocturnos, teatros, centros de convenciones, estudios de grabación, sonorización para eventos religiosos, etc.
 				</p>
-				<div class="readmore-w3">
-					<a class="readmore" href="#" data-toggle="modal" data-target="#myModal">ver Mas<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
-				</div>
+				<br>
+				
 			</div>
 			<div class="col-md-6 bottomgridimg">
 				<img src="images/ab11.jpg" alt="">
@@ -291,6 +290,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 </div>
 </div>
+<div>
+	<div>
+	<font face="Comic Sans MS,arial,verdana"size=8>
+	<MARQUEE style="color:red;">RECEPCIÓN Y ENTREGA DE EQUIPOS POR ENCOMIENDAS A LARGO DE LA REGIÓN</color></MARQUEE>
+	</font>
+	<br>
+	<br>
+</div>
+</div>
+
 <!-- //services -->
 <!-- team -->
 <div id="team" class="team-content all_pad w3agile team">
@@ -542,7 +551,7 @@ $(function () {
 							</div>
 							<div class="w3-address-right">
 								<h6>Fono de Contacto</h6>
-								<p>+569 96448764</p>
+								<p><h6>+569 96448764</h6></p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
@@ -551,7 +560,7 @@ $(function () {
 								<i class="fa fa-envelope" aria-hidden="true"></i>
 							</div>
 							<div class="w3-address-right">
-								<h6>Email </h6>
+								<h6>Constactanos o consulta por tu orden de servicio.</h6>
 								<p>Email :<a href="mailto:info@proaudios.cl"> info@proaudios.cl</a></p>
 							</div>
 							<div class="clearfix"> </div>
@@ -562,7 +571,7 @@ $(function () {
 							</div>
 							<div class="w3-address-right">
 								<h6>Ubicacion</h6>
-								<p>Laguna Legia, 4924, Valle Volcanes, Puerto Montt. 
+								<p><h6>Laguna Legia, 4924, Valle Volcanes, Puerto Montt. </h6>
 								
 								</p>
 							</div>
