--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <li><a href="#services" class="scroll"> Servicios</a></li>
 		<li><a href="#portfolio" class="scroll">Galeria</a></li>
 		<li><a href="#test" class="scroll">Clientes</a></li>
-		<li><a href="#contact" class="scroll">Contactos</a></li>
+		<!--<li><a href="#contact" class="scroll">Contactos</a></li> -->
 	 </ul>
 
 				<div class="w3ls-social-icons">
@@ -185,7 +185,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div> 
 		<div class="modal-body">
 			<div class="agileits-w3layouts-info">
-				<img src="images/m1.jpg" alt="" />
+				<center><img src="images/m1.jpg" alt="" /></center>
 				<p>Para nuestros clientes que no residen en la  ciudad de Puerto Montt, tenemos también el servicio de recepción y entrega por Courier de preferencia donde pueden enviar su equipo con destino a oficina de Puerto Montt (CRUZ DEL SUR, TUR-BUS, etc)  previo aviso a través de correo electrónico y nosotros retiramos; posterior a la reparación enviamos por el mismo medio.</p>
 			</div>
 		</div>
@@ -551,7 +551,7 @@ $(function () {
 							</div>
 							<div class="w3-address-right">
 								<h6>Fono de Contacto o Whatsapp</h6>
-								<p><a href="https://api.whatsapp.com/send?phone=56954169789&text=Hola%2C%20deseo%20adquirir%20un%20soporte%20con%20ustedes">+5696448764</a></p>
+								<p><a href="https://api.whatsapp.com/send?phone=56996448764&text=Hola%2C%20quisiera%20asesoria%20de%20su%20empresa">+56996448764</a></p>
 							</div>
 							<div class="clearfix"> </div>
 						</div>
