--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="about-bottom-grid1">
 			<div class="col-md-6 bottomgridtext">
 				<h3>QUIENES SOMOS ?</h3>
-				<p>Somos una empresa dedicada a la industria del audio con una amplia experiencia y  capacitación en mantenimiento, asesoría, reparación y manejo de equipos de audio profesional  para espectáculos, bares, discoteques, centros nocturnos, teatros, centros de convenciones, estudios de grabación, sonorización para eventos religiosos, etc.
+				<p ALIGN="justify">Somos una empresa dedicada a la industria del audio con una amplia experiencia y  capacitación en mantenimiento, asesoría, reparación y manejo de equipos de audio profesional  para espectáculos, bares, discoteques, centros nocturnos, teatros, centros de convenciones, estudios de grabación, sonorización para eventos religiosos, etc.
 				</p>
 				<br>
 				
@@ -164,7 +164,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="col-md-6 bottomgridtext bottomleft">
 				<h3><!--TEX--></h3>
-				<p>Soporte de equipos de todo tipo y marcas  para sonido en Vivo de pequeños y grandes espectáculos: consolas de sonido, amplificadores (para salas, monitores y de instrumentos), ecualizadores, crossover, procesadores de dinámica y de efectos; tenemos una amplia base de datos con diagramas de circuitos esquemáticos y una basta gama de repuestos  todos importados y originales los cuales recomendamos por durabilidad para nuestro servicio de mantenimiento o reparación.
+				<p ALIGN="justify">Soporte de equipos de todo tipo y marcas  para sonido en Vivo de pequeños y grandes espectáculos: consolas de sonido, amplificadores (para salas, monitores y de instrumentos), ecualizadores, crossover, procesadores de dinámica y de efectos; tenemos una amplia base de datos con diagramas de circuitos esquemáticos y una basta gama de repuestos  todos importados y originales los cuales recomendamos por durabilidad para nuestro servicio de mantenimiento o reparación.
                  </p>
 				<div class="readmore-w3">
 					<a class="readmore" href="#" data-toggle="modal" data-target="#myModal">Ver Mas<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
@@ -186,7 +186,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="modal-body">
 			<div class="agileits-w3layouts-info">
 				<center><img src="images/m1.jpg" alt="" /></center>
-				<p>Para nuestros clientes que no residen en la  ciudad de Puerto Montt, tenemos también el servicio de recepción y entrega por Courier de preferencia donde pueden enviar su equipo con destino a oficina de Puerto Montt (CRUZ DEL SUR, TUR-BUS, etc)  previo aviso a través de correo electrónico y nosotros retiramos; posterior a la reparación enviamos por el mismo medio.</p>
+				<p ALIGN="justify">Para nuestros clientes que no residen en la  ciudad de Puerto Montt, tenemos también el servicio de recepción y entrega por Courier de preferencia donde pueden enviar su equipo con destino a oficina de Puerto Montt (CRUZ DEL SUR, TUR-BUS, etc)  previo aviso a través de correo electrónico y nosotros retiramos; posterior a la reparación enviamos por el mismo medio.</p>
 			</div>
 		</div>
 		</div>
