--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+      
 	 <a class="navbar-brand logo w3-layouts" href="index.html">
-	  <h1><span class="head w3l"><i class="fa fa-music" aria-hidden="true"></i><sup><i class="fa fa-cog" aria-hidden="true"></i></sup></span>PROAUDIOS</h1>
+	  <h1><span class="head w3l"><sup></sup><img src="images/logo.png" width="30%" /></span></h1>
 	 </a>
+	
+
 	 </div>
 	 <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse header" id="bs-example-navbar-collapse-1">
