--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="caption text-center">
 			<div class="col-md-8 banner_text_left">
 			<h3>PROAUDIOS</h3>
-			<p>SERVICIOS TECNÍCO Y PROYECTOS PARA AUDIO PROFESIONAL</p>
+			<p>SERVICIOS TECNICO PARA AUDIO PROFESIONAL</p>
 			</div>
 			<div class="col-md-4 banner_text_right">
 			<h4></h4>
@@ -114,7 +114,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <div class="caption text-center">
 			<div class="col-md-8 banner_text_left">
 			<h3>PROAUDIOS</h3>
-			<p>SERVICIOS TECNÍCO Y PROYECTOS PARA AUDIO PROFECIONAL</p>
+			<p>SERVICIOS TECNICO PARA AUDIO PROFECIONAL</p>
 			</div>
 			<div class="col-md-4 banner_text_right">
 			<h4></h4>
