--- a/index.html
+++ b/index.html
@@ -320,16 +320,99 @@ height="150">
 <!-- team -->
 <div id="team" class="team-content all_pad w3agile team">
 	<div class="container">
-	
-
-
 				<div class="w3-head-all ">
-			<h3>MULTIMEDIA REPARACION EQUIPOS</h3>
+			<h3>Tipo de Repuestos</h3>
 		</div>	
-				<center><iframe width="560" height="315" src="https://www.youtube.com/embed/NslMC0az0GM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				   <iframe width="560" height="315" src="https://www.youtube.com/embed/ElZTH3CMi8E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				</center>
+		<div class="t-content-gds">
+			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
+				<div class="team-img">
+					<img class="img-responsive" src="images/t1.jpg" alt=" "/>
+					<div class="team-text">
+						<h4>Semicondustores</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
+				<div class="team-img">
+					<img class="img-responsive" src="images/t2.jpg" alt=" "/>
+					<div class="team-text">
+						<h4>Potencíometros y Faders</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
+				<div class="team-img">
+					<img class="img-responsive" src="images/t3.jpg" alt=" "/>
+					<div class="team-text">
+						<h4>Modulos efectos</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
+				<div class="team-img">
+					<img class="img-responsive" src="images/t4.jpg" alt=" "/>
+					<div class="team-text">
+						<h4>Resistencias</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="clearfix"></div>
 		</div>
+		<div class="t-content-gds">
+			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
+				<div class="team-img">
+					<img class="img-responsive" src="images/t1.jpg" alt=" "/>
+					<div class="team-text">
+						<h4>Condensadores</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
+				<div class="team-img">
+					<img class="img-responsive" src="images/t2.jpg" alt=" "/>
+					<div class="team-text">
+						<h4>Filtros pasivos para altavoces</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
+				<div class="team-img">
+					<img class="img-responsive" src="images/t3.jpg" alt=" "/>
+					<div class="team-text">
+						<h4>Transformadortes</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
+				<div class="team-img">
+					<img class="img-responsive" src="images/t4.jpg" alt=" "/>
+					<div class="team-text">
+						<h4>Fa</h4>
+						<p></p>
+					</div>
+				</div>
+			</div>
+			<div class="clearfix"></div>
+		</div>
+		<div class="t-content-gds">
+			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
+				<div class="team-img">
+					<img class="img-responsive" src="images/t1.jpg" alt=" "/>
+					<div class="team-text">
+						<h4>Condensadores</h4>
+						<p></p>
+					</div>
+				</div>
+			<div class="clearfix"></div>
+		</div>
+	</div>
 </div>
 <!-- //team -->
 <!-- gallery -->
