--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ height="150">
 		<div class="t-content-gds">
 			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
 				<div class="team-img">
-					<img class="img-responsive" src="images/t1.jpg" alt=" "/>
+					<img class="img-responsive" src="images/semi.jpeg" alt=" "/>
 					<div class="team-text">
 						<h4>Semicondustores</h4>
 						<p></p>
@@ -335,7 +335,7 @@ height="150">
 			</div>
 			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
 				<div class="team-img">
-					<img class="img-responsive" src="images/t2.jpg" alt=" "/>
+					<img class="img-responsive" src="images/pote.jpg" alt=" "/>
 					<div class="team-text">
 						<h4>Potencíometros y Faders</h4>
 						<p></p>
@@ -344,16 +344,17 @@ height="150">
 			</div>
 			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
 				<div class="team-img">
-					<img class="img-responsive" src="images/t3.jpg" alt=" "/>
+					<img class="img-responsive" src="images/mefe.jpg" alt=" "/>
 					<div class="team-text">
 						<h4>Modulos efectos</h4>
 						<p></p>
 					</div>
 				</div>
 			</div>
+			
 			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
 				<div class="team-img">
-					<img class="img-responsive" src="images/t4.jpg" alt=" "/>
+					<img class="img-responsive" src="images/res.jpg" alt=" "/>
 					<div class="team-text">
 						<h4>Resistencias</h4>
 						<p></p>
@@ -362,10 +363,11 @@ height="150">
 			</div>
 			<div class="clearfix"></div>
 		</div>
+		<br>
 		<div class="t-content-gds">
 			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
 				<div class="team-img">
-					<img class="img-responsive" src="images/t1.jpg" alt=" "/>
+					<img class="img-responsive" src="images/cond.jpg" alt=" "/>
 					<div class="team-text">
 						<h4>Condensadores</h4>
 						<p></p>
@@ -374,7 +376,7 @@ height="150">
 			</div>
 			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
 				<div class="team-img">
-					<img class="img-responsive" src="images/t2.jpg" alt=" "/>
+					<img class="img-responsive" src="images/fil.jpg" alt=" "/>
 					<div class="team-text">
 						<h4>Filtros pasivos para altavoces</h4>
 						<p></p>
@@ -383,36 +385,39 @@ height="150">
 			</div>
 			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
 				<div class="team-img">
-					<img class="img-responsive" src="images/t3.jpg" alt=" "/>
+					<img class="img-responsive" src="images/trans.jpg" alt=" "/>
 					<div class="team-text">
 						<h4>Transformadortes</h4>
 						<p></p>
 					</div>
 				</div>
 			</div>
+			
 			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
 				<div class="team-img">
-					<img class="img-responsive" src="images/t4.jpg" alt=" "/>
+					<img class="img-responsive" src="images/fm.jpg" alt=" "/>
 					<div class="team-text">
-						<h4>Fa</h4>
+						<h4>Faders Motorizadores</h4>
 						<p></p>
 					</div>
 				</div>
 			</div>
 			<div class="clearfix"></div>
 		</div>
+		<br>
 		<div class="t-content-gds">
 			<div class="col-md-3 t-cont-gds wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="0s">
 				<div class="team-img">
-					<img class="img-responsive" src="images/t1.jpg" alt=" "/>
+					<img class="img-responsive" src="images/targ.jpg" alt=" "/>
 					<div class="team-text">
-						<h4>Condensadores</h4>
+						<h4>Tarjetas electrónicas para consolas digitales</h4>
 						<p></p>
 					</div>
 				</div>
 			<div class="clearfix"></div>
 		</div>
 	</div>
+</div>
 </div>
 <!-- //team -->
 <!-- gallery -->
