--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <div class="caption text-center">
 			<div class="col-md-8 banner_text_left">
 			<h3>PROAUDIOS</h3>
-			<p>SERVICIOS TECNICO PARA AUDIO PROFESIONAL</p>
-			<audio src="m.mp3" preload="auto"></audio>
+			<p>EMPRESA DEDICADA A LA INDUSTRIA DE LOS SISTEMAS DE AUDIO y ELECTROACUSTICA CON UN AMPLIO CONOCIMIENTO Y EXPERIENCIA EN</p>
+		
 			
 			</div>
 			<div class="col-md-4 banner_text_right">
@@ -121,22 +121,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <img src="images/b11.jpg" alt="home" />
             <div class="caption text-center">
 			<div class="col-md-8 banner_text_left">
-			<h3>PROAUDIOS</h3>
-			<p>SERVICIOS TECNICO PARA AUDIO PROFESIONAL</p>
+			<p>EMPRESA DEDICADA A LA INDUSTRIA DE LOS SISTEMAS DE AUDIO y ELECTROACUSTICA CON UN AMPLIO CONOCIMIENTO Y EXPERIENCIA EN</p>
+			
+			
 			</div>
 			<div class="col-md-4 banner_text_right">
 			<h4></h4>
 			<div class="w3-ban-text">
 			<h5></h5>
-			<p></p>
+			<p>LEVANTAMIENTO, REPARACION Y MEJORAMIENTO PARA SISTEMAS DE AUDIO INSTALADOS Y EN FUNCIONAMIENTO.</p>
 			</div>
 			<div class="w3-ban-text">
 			<h5></h5>
-			<p></p>
+			<p>SERVICIO TECNICO Y MANUTENCION DE EQUIPOS PARA REFUERZO SONORO.</p>
 			</div>
 			<div class="w3-ban-text">
 			<h5></h5>
-			<p></p>
+			<p>SERVICIO TECNICO Y MENUTENCION DE EQUIPOS PARA INSTRUMENTOS.</p>
 			</div>
 			</div>
 			<div class="clearfix"></div>
